--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/ciyer87/Team-Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "validate.io-email-address": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
